--- a/index.html
+++ b/index.html
@@ -2603,7 +2603,7 @@
             <!-- 로또 Navi 시작 버튼 (사용자 요청 위치) -->
             <button id="naviModeBtn" onclick="toggleNaviMode()"
                 style="width: 100%; margin: 10px 0 20px 0; padding: 12px; background: linear-gradient(135deg, #1976d2, #1565c0); color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-                🧭 로또 Navi 분석 모드 시작 <span
+                🧭 로또 Navi by KINOV AI <span
                     style="background:rgba(255,255,255,0.2); padding: 2px 6px; border-radius: 10px; font-size: 10px;">beta</span>
             </button>
 
