--- a/index.html
+++ b/index.html
@@ -8847,12 +8847,11 @@
 
             .finger-prompt-step5 {
                 position: absolute;
-                bottom: -10px;
-                /* 위로 5px (기존 -15px -> -10px) */
+                bottom: -3px;
+                /* 위로 7px 이동 (기존 -10px -> -3px) */
                 left: 31%;
-                /* 우측으로 이동 (기존 30% -> ~31% + 보간) */
-                margin-left: 5px;
-                /* 정확히 5px 우측 이동 */
+                margin-left: 7px;
+                /* 우측으로 2px 이동 (기존 5px -> 7px) */
                 display: flex;
                 align-items: center;
                 gap: 8px;
