style: final Step 5 finger prompt position adjustment (+5px right, +7px up)

--- a/index.html
+++ b/index.html
@@ -8847,11 +8847,11 @@
 
             .finger-prompt-step5 {
                 position: absolute;
-                bottom: -3px;
-                /* 위로 7px 이동 (기존 -10px -> -3px) */
+                bottom: 4px;
+                /* 최종 위치: 위로 7px 추가 이동 */
                 left: 31%;
-                margin-left: 7px;
-                /* 우측으로 2px 이동 (기존 5px -> 7px) */
+                margin-left: 12px;
+                /* 최종 위치: 우측으로 5px 추가 이동 */
                 display: flex;
                 align-items: center;
                 gap: 8px;
