--- a/index.html
+++ b/index.html
@@ -8857,7 +8857,8 @@
                 bottom: 4px;
                 /* 최종 위치: 위로 7px 추가 이동 */
                 left: 31%;
-                margin-left: 12px;
+                margin-left: 22px;
+                /* 우측으로 10px 추가 이동 (기존 12px -> 22px) */
                 /* 최종 위치: 우측으로 5px 추가 이동 */
                 display: flex;
                 align-items: center;
