--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <link rel="preload" href="assets/markers/tier4.png" as="image">
 
     <!-- Lotto Navi Data & Engine -->
-    <script src="lotto_history_data.js"></script>
-    <script src="lotto_navi.js"></script>
+    <script src="lotto_history_data.js?v=20260222-2"></script>
+    <script src="lotto_navi.js?v=20260222-2"></script>
 
     <meta name="description" content="전국 로또 1등 당첨 판매점을 지도에서 한눈에 확인하세요. 내 주변 명당 찾기, 로또 번호 무료 추천 서비스 제공.">
     <meta name="keywords" content="로또, 로또명당, 로또지도, 로또1등, 로또당첨번호, 로또판매점, KINOV">
